@@ -1,3 +1,9 @@
+2009-07-08  Roland McGrath  <roland@redhat.com>
+
+	* c++/output-shape.cc: New file.
+	* Makefile.am (libdwpp_a_SOURCES): Add it.
+	* c++/dwarf_output: Call add_shape method there.
+
 2009-07-06  Roland McGrath  <roland@redhat.com>
 
 	* c++/dwarf_tracker (tracker): Break out private class into ...
